hphp/hack/test/typecheck/as_expression/dict2.php.like_types.exp
File "dict2.php", line 13, characters 16-34:
Invalid argument (Typing[4110])
File "dict2.php", line 23, characters 23-39:
Expected ~dict<int, string> because it is an unenforceable type
File "dict2.php", line 13, characters 31-34:
But got dict<arraykey, mixed>
File "dict2.php", line 16, characters 16-40:
Invalid argument (Typing[4110])
File "dict2.php", line 23, characters 23-39:
Expected ~dict<int, string> because it is an unenforceable type
File "dict2.php", line 16, characters 31-40:
But got dict<arraykey, mixed>
File "dict2.php", line 12, characters 31-34:
The type dict expects 2 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 11, characters 22-25:
Definition is here
File "dict2.php", line 13, characters 31-34:
The type dict expects 2 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 11, characters 22-25:
Definition is here
